Fix JBWS-1762 regression
git-svn-id: https://anonsvn.jboss.org/repos/jbossws/stack/native/trunk@4988 50344849-fb0f-0410-a53f-a94597aac05c